WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209427
[mac-wk1] fast/scrolling/arrow-key-scroll-in-rtl-document.html is a flaky timeout
https://bugs.webkit.org/show_bug.cgi?id=209427
Summary
[mac-wk1] fast/scrolling/arrow-key-scroll-in-rtl-document.html is a flaky tim...
Ryan Haddad
Reported
2020-03-23 10:06:41 PDT
fast/scrolling/arrow-key-scroll-in-rtl-document.html is a flaky timeout on mac-wk1 bots even after the fix in
https://trac.webkit.org/changeset/258805
https://results.webkit.org/?suite=layout-tests&test=fast%2Fscrolling%2Farrow-key-scroll-in-rtl-document.html
--- /Volumes/Data/slave/catalina-release-tests-wk1/build/layout-test-results/fast/scrolling/arrow-key-scroll-in-rtl-document-expected.txt +++ /Volumes/Data/slave/catalina-release-tests-wk1/build/layout-test-results/fast/scrolling/arrow-key-scroll-in-rtl-document-actual.txt @@ -1 +1,2 @@ +FAIL: Timed out waiting for notifyDone to be called PASS: scrollLeft is -120
Attachments
Patch
(3.36 KB, patch)
2020-03-23 20:24 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-03-23 10:07:13 PDT
<
rdar://problem/60779484
>
Ryan Haddad
Comment 2
2020-03-23 10:39:50 PDT
I can reproduce with: run-webkit-tests fast/scrolling/arrow-key-scroll-in-rtl-document.html -1 --iter 25 --no-retry --exit-after-n-crashes-or-timeouts 1
Simon Fraser (smfr)
Comment 3
2020-03-23 20:24:20 PDT
Created
attachment 394344
[details]
Patch
Wenson Hsieh
Comment 4
2020-03-23 20:26:55 PDT
Comment on
attachment 394344
[details]
Patch r=mews
EWS
Comment 5
2020-03-23 21:17:24 PDT
Committed
r258905
: <
https://trac.webkit.org/changeset/258905
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 394344
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug