[mac-wk1] fast/scrolling/arrow-key-scroll-in-rtl-document.html is a flaky timeout https://bugs.webkit.org/show_bug.cgi?id=209427

Reviewed by Wenson Hsieh.
Source/WebCore:

In WebKit1, arrow-key scrolls are instantaneous, so scrolling is complete before the test
registers the 'monitor wheel events' callback. However, nothing triggers a subsequent rendering
update, so the test never completes.

Fix by having WheelEventTestMonitor::setTestCallbackAndStartMonitoring() trigger a rendering
update.

* page/WheelEventTestMonitor.cpp:
(WebCore::WheelEventTestMonitor::setTestCallbackAndStartMonitoring):

Tools:

0 => NULL

* DumpRenderTree/mac/DumpRenderTree.mm:
(invalidateAnyPreviousWaitToDumpWatchdog):


Canonical link: https://commits.webkit.org/222399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258905 268f45cc-cd09-0410-ab3c-d52691b4dbfc